syntax = "proto3";

package usercenter.v1;

import "google/api/annotations.proto";

option go_package = "github.com/dawn303/cc/pkg/api/usercenter/v1;v1";

service UserCenter{
  rpc Login(LoginRequest) returns (LoginReply) {
    option (google.api.http) = {
      post: "/v1/auth/login",
      body: "*",
    };
  }
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginReply {
  string refresh_token = 1;
  string access_token = 2;
  string type = 3;
  int64 expiresAt = 4;
}
